--- a/STA380Exercises_Ofunrein_Pflum_Robinson_Vincent.Rmd
+++ b/STA380Exercises_Ofunrein_Pflum_Robinson_Vincent.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 Composed By: Kessiena Ofunrein, Jordan Pflum, Jennifer Robinson, and Katelyn Vincent 
 # Question 1
-```{r}
+```{r,include=FALSE}
 
 ```
 # Question 2
