--- a/STA380Exercises_Ofunrein_Pflum_Robinson_Vincent.Rmd
+++ b/STA380Exercises_Ofunrein_Pflum_Robinson_Vincent.Rmd
@@ -211,7 +211,60 @@ Strategic planning is a fundamental component of how airports sustain themselves
 ##############################    GEO PLOT   ##############################
 
 ```
-# Question 3
+
+
+```{r}
+#Plot number of delays based on time of day
+
+#Need to change time format
+
+#how do we group the times into bins?
+d3 = abia  %>% filter(DepDelay >=30) %>%
+  group_by(CRSDepTime) %>%
+  summarize(Frequency=n())
+
+ggplot(data = d3) + 
+  geom_bar(mapping = aes(x=CRSDepTime, y=Frequency),
+           position="dodge", stat='identity') +
+  labs(x = "time") +
+  theme_bw() +
+  ggtitle("Delays based on Time of Day") +
+  # center plot title
+  theme(plot.title = element_text(hjust = 0.5))
+
+
+#plot average delays per time period
+d4 = abia  %>% filter(DepDelay >=30) %>%
+  group_by(CRSDepTime) %>%
+  summarize(numcancels=n()/24)
+
+ggplot(data = d4) + 
+  geom_bar(mapping = aes(x=CRSDepTime, y=numcancels),
+           position="dodge", stat='identity') +
+  labs(x = "time") +
+  theme_bw() +
+  ggtitle("Delays based on Time of Day") +
+  # center plot title
+  theme(plot.title = element_text(hjust = 0.5))
+
+```
+```{r}
+#plot average delays per time period
+d4 = abia  %>% filter(DepDelay >=30) %>%
+  group_by(CRSDepTime) %>%
+  summarize(numcancels=n()/24)
+
+ggplot(data = d4) + 
+  geom_bar(mapping = aes(x=CRSDepTime, y=numcancels),
+           position="dodge", stat='identity') +
+  labs(x = "time") +
+  theme_bw() +
+  ggtitle("Delays based on Time of Day") +
+  # center plot title
+  theme(plot.title = element_text(hjust = 0.5))
+```
+
+Question 3
 ```{r}
 
 ```
